# DocSuri

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Architecture-Report.md  CONVENTIONS.md  README.md  Sprint-Backlog-Citation-Genealogy.md  Sprint-Backlog-Exploration.md  Sprint-Backlog-Ingest.md  Sprint-Backlog-Monitoring.md  Sprint-Backlog-Priority-Classifier.md  Sprint-Backlog-Project-Trend.md  Sprint-Backlog-Reading-Assistant.md  Sprint-Backlog-Reproducibility.md  Sprint-Backlog-Research-Gap.md  Sprint-Backlog-Search.md  Sprint-Backlog-Summarization.md  Sprint-Backlog-Translation.md  Sprint-Backlog-Verification-Tools.md  Sprint-Capacity-Plan.md  amplify.yml  architecture.html  priorities.html  pytest.ini  requirements.txt  schema.sql  summarization-translation-pipeline.md
backend/: .env.example  Dockerfile  README.md  __init__.py  app.py  config.py  db.py  docker-compose.yml  errors.py  health.py  main.py  pyproject.toml  requirements-deploy.txt  wiring.py
backend/data/: aws_outputs.json  corpus_docs.json  corpus_seed.json  glossary_seed.json
backend/middleware/: __init__.py  agent_attachments.py  agent_quota.py  auth.py  gateway.py  rate_limit.py  request_context.py  security_headers.py  wiring.py
backend/migrations/: __init__.py  __main__.py
backend/modules/: __init__.py  user_docmodel.py
backend/modules/accounts/: README.md  controller.py  guard.py  models.py  password.py  purge_worker.py  ruff.toml  schemas.py  seed_admin.py
backend/modules/citation_graph/: __init__.py  controller.py
backend/modules/discovery/: README.md  pyproject.toml
backend/modules/evidence/: __init__.py  assembler.py  attachments.py  controller.py  extractor.py  intent.py  models.py  orchestrator.py  prompts.py  real_wiring.py  repository.py  service.py  settings.py  streaming.py  tools.py  worker.py
backend/modules/mypage/: __init__.py  controller.py  models.py  ports.py  ruff.toml  schemas.py
backend/modules/novelty/: __init__.py  adapters.py  controller.py  models.py  repository.py  security.py  service.py  streaming.py  validators.py  worker.py
backend/modules/ops/: __init__.py  controller.py  ruff.toml
backend/modules/personalization/: __init__.py  backfill.py  controller.py  maintenance.py  models.py  repository.py  service.py
backend/modules/research/: __init__.py  controller.py  models.py  repository.py  service.py
backend/modules/summarization/: pyproject.toml  ruff.toml
backend/scripts/: build_corpus.py  deploy_lambda.sh  provision_aws.py  scenario1_test.py  scenario2_test.py  scenario3_test.py  teardown_aws.py  u0_demo.py  u1_demo.py  u4_demo.py
backend/src/docsuri/: app.py
backend/tests/: conftest.py  test_agent_quota.py  test_app_shell.py  test_aws_integration.py  test_citation_graph.py  test_citation_graph_pbt.py  test_discovery_search_identity.py  test_evidence.py  test_evidence_extractor.py  test_evidence_intent.py  test_evidence_literal_search.py  test_evidence_narrative.py  test_evidence_prompts.py  test_evidence_quality_gates.py  test_evidence_scope_control.py  test_evidence_streaming.py  test_evidence_tools.py  test_evidence_worker.py  test_mypage.py  test_novelty.py  test_novelty_quality_gates.py  test_ops_endpoints.py  test_personalization.py  test_ports_unit.py  test_research.py  test_research_evidence_isolation.py  test_research_resolved_paper_ids.py  test_u0_buildable.py  test_u1_api.py  test_u1_discover.py  test_u1_safety.py  test_u2_api.py  test_u2_comprehend.py  test_u4_api.py  test_u4_trace.py  test_u6_middleware.py  test_user_docmodel.py
demo/: .env.example  .gitignore  CLAUDE.MD  Dockerfile  README.md  SEARCH_ARCHITECTURE.md  docker-compose.yml  pyproject.toml  run.sh
demo/app/: CLAUDE.MD  __init__.py  container.py  main.py
demo/app/api/: routes_ingest.py  routes_search.py  routes_summary.py  routes_translation.py
demo/app/infra/: CLAUDE.MD
demo/scripts/: smoke.sh
demo/seed/: sample-paper.json
demo/tests/: conftest.py  test_ingest.py  test_search.py  test_summary.py  test_translation.py
demo/web/: app.js  index.html  styles.css
ingestion/: Dockerfile  README.md  pyproject.toml
ingestion/migrations/postgres/: 001_control_plane.sql  002_paper_asset.sql  003_corpus_control_plane.sql
ingestion/src/docsuri_ingestion/: __init__.py  application.py  asset_extraction.py  cli.py  config.py  corpus_sources.py  full_text_extraction.py  http_limits.py  migrate.py  observability.py  ports.py  processors.py  raw_backfill.py  reembed.py  reparse.py  resilience.py  runtime.py  settings.py  worker.py  xmlsafe.py
ingestion/tests/: __init__.py  conftest.py  strategies.py  test_arxiv_license_fallback.py  test_arxiv_oai_set.py  test_asset_extraction_real.py  test_asset_source_eprint.py  test_asset_store_real.py  test_asset_wiring.py  test_assets.py  test_audit_hardening.py  test_canonical_dedup.py  test_cohere_direct.py  test_corpus_sources.py  test_dedup_idempotency.py  test_docmodel_build_job.py  test_docmodel_builder.py  test_docmodel_macros.py  test_docmodel_mathml.py  test_docmodel_parser.py  test_docmodel_source.py  test_docmodel_store.py  test_docmodel_tei.py  test_domain_units.py  test_full_text_extraction.py  test_grobid_adapter.py  test_job_metadata_batching.py  test_migrate_dispatch.py  test_orchestration.py  test_properties.py  test_raw_backfill.py  test_reembed.py  test_runtime.py
ops/: README.md  pyproject.toml
ops/cdk/: app.py  cdk.context.json  cdk.json
ops/cdk/stacks/: _origin_auth.py  access_stack.py  cicd_stack.py  compute_stack.py  evidence_stack.py  frontend_stack.py  ingestion_stack.py  network_stack.py  novelty_stack.py  search_stack.py  summarization_stack.py
ops/migrations/v4_migration/: backfill_v4.py  cutover_alias.py  provision_v2_index.py
ops/runbooks/: reembed-fast-rebuild.md
ops/src/docsuri_ops/: __init__.py  _dedup.py  cli.py  cost_guard.py  dashboard.py  detectors.py  (+7 more)
ops/tests/: test_cli_worker.py  test_cost_guard.py  test_grounding.py  test_health.py  test_incidents_dashboard.py  test_ingestion_stack_contract.py  test_novelty_stack_contract.py  test_observability.py  test_reliability.py
(+1076 files in other folders)
