[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-paper-workbench-demo"
version = "0.1.0"
description = "Sprint 1 walking-skeleton demo for Semantic Paper Workbench (#01a Search, #01b Ingest, #02 Summarization, #03 Translation)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Semantic Paper Workbench team" },
]
keywords = ["llm", "papers", "search", "summarization", "translation", "fastapi", "claude"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: FastAPI",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "tenacity>=9",
  "anthropic>=0.40",
  "python-multipart",
  "pymupdf>=1.24",                            # provides `fitz` for app/infra/pdf/pymupdf_parser.py
  # Phase 0 stack — AGENTS.md §5.3 (SNS+SQS+Celery), §4.1 (Redis cache), §4.5 (SlowAPI inbound).
  "celery[redis]>=5.4",
  "redis>=5.2",
  "slowapi>=0.1.9",
  "boto3>=1.35",                              # SNS / SQS / Secrets Manager
  "psycopg[binary]>=3.2",
  "pgvector>=0.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "openai>=1.54",                             # text-embedding-3-small
  "langgraph>=0.2",
  # Observability — OTel SDK + FastAPI/Celery instrumentation. Trace backend
  # (Tempo) is deferred; until then OTLP exporter targets console / local
  # collector per §4.6 ops conv.
  "opentelemetry-sdk>=1.27",
  "opentelemetry-api>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-httpx>=0.48b0",
  "opentelemetry-instrumentation-celery>=0.48b0",
  "opentelemetry-instrumentation-redis>=0.48b0",
  "opentelemetry-exporter-otlp-proto-http>=1.27",
  "python-json-logger>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
  "ruff>=0.7",
  "pip-audit>=2.7",
  "testcontainers>=4.8",                      # §4.6 verification tools
  "moto[sns,sqs]>=5.0",                       # SNS/SQS unit tests without AWS
]

[project.scripts]
# `uvicorn` consumes the FastAPI app object — `app.main:app`.
# `demo-server` is exposed for parity with `run.sh`'s `uvicorn` invocation.
demo-server = "app.main:app"

[project.urls]
Homepage = "https://github.com/anthropics/semantic-paper-workbench"
Issues = "https://github.com/anthropics/semantic-paper-workbench/issues"

# -------- Tooling --------

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "seed*", "scripts*", "web*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "integration: requires a live external service (arXiv / GROBID / Anthropic).",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["seed", "scripts", "web", ".venv", "__pycache__"]

[tool.ruff.lint]
# Minimal set — pyflakes (F), pycodestyle errors (E), isort (I).
# Sprint 2 will add B, UP, SIM, RUF once the walking skeleton stabilises.
select = ["E", "F", "I"]
ignore = [
  "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
