[project]
name = "docsuri-ingestion"
version = "0.1.0"
description = "DocSuri U1 ingestion worker for arXiv harvesting, chunking, embedding, and indexing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "docsuri-shared",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "httpx>=0.27,<1",
    "boto3>=1.34,<2",
    "opensearch-py>=2.6,<3",
    "psycopg[binary]>=3.2,<4",
    "structlog>=24.1,<25",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
docsuri-shared = { path = "../shared/python", editable = true }

[project.scripts]
docsuri-ingestion = "docsuri_ingestion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docsuri_ingestion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
