[project]
name = "docsuri-ingestion"
version = "0.1.0"
description = "DocSuri U1 ingestion worker for arXiv harvesting, chunking, embedding, and indexing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "docsuri-shared",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "httpx>=0.27,<1",
    "boto3>=1.34,<2",
    "opensearch-py>=2.6,<3",
    "psycopg[binary]>=3.2,<4",
    "psycopg-pool>=3.2,<4",
    "structlog>=24.1,<25",
    # BR-29 full-text PDF fallback (MIT, permissive) — core because the full-text path now
    # depends on PDF text extraction when arXiv HTML is unavailable.
    "pdfplumber>=0.11,<1",
    # BR-30/TD-16 doc-model HTML parser stack (permissive: lxml=BSD, beautifulsoup4=MIT).
    # Deterministic arXiv/ar5iv (LaTeXML) HTML -> doc-model parsing; no LLM extraction (D1).
    # lxml >=6.1: PYSEC-2026-87 fixed in 6.1.0 (pip-audit / Security Scan gate).
    "lxml>=6.1,<7",
    "beautifulsoup4>=4.12,<5",
    # NFR §0.5: parse untrusted arXiv/OAI/GROBID XML with DTD/entity expansion forbidden
    # (entity-expansion DoS guard). Pure-Python, PSF-2.0 — permissive (SEC-10).
    "defusedxml>=0.7,<1",
]

[project.optional-dependencies]
# FR-17 multimodal figure/table extraction (permissive licenses only — TD-11/13 amended,
# PyMuPDF/AGPL avoided): pypdfium2 (Apache-2.0/BSD-3), Pillow (HPND). pdfplumber is now a
# core dependency (BR-29). Only required when MULTIMODAL_ASSETS_ENABLED=true.
assets = [
    "pypdfium2>=4.30,<5",
    "Pillow>=12.2,<13",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
docsuri-shared = { path = "../shared/python", editable = true }

[project.scripts]
docsuri-ingestion = "docsuri_ingestion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docsuri_ingestion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
