[project]
name = "docsuri-ops"
version = "0.1.0"
description = "DocSuri U6 Reliability/Ops worker for observability, cost guard, incident detection, and health evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "docsuri-shared",
    "pydantic>=2.7,<3",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv.sources]
docsuri-shared = { path = "../shared/python", editable = true }

[project.scripts]
docsuri-ops = "docsuri_ops.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docsuri_ops"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
