[project]
name = "docsuri-discovery"
version = "0.1.0"
description = "U2 Discovery — synchronous search read path (mock-first). Track 3 (@kyjness)."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    # Shared contracts (DTOs/events/vector-spec/ports) — single source of truth, never forked.
    "docsuri-shared",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
# Thin FastAPI router (QueryIntakeController). The backend web framework is a backend-shared
# (app-shell) decision pending @ELSAPHABA sign-off — the domain core runs without FastAPI.
api = ["fastapi>=0.110"]

[dependency-groups]
dev = ["pytest>=8.0", "hypothesis>=6.100", "ruff>=0.6"]

# Module-local path dep so Track 3 is testable standalone (mock-first). The backend
# integration packaging/workspace is app-shell's domain (CG-1).
[tool.uv.sources]
docsuri-shared = { path = "../../../shared/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discovery"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# src layout: make `discovery` importable in tests without an install step (docsuri-shared
# still comes from the path dep via `uv sync`).
pythonpath = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
